# micro_sampler

./: Cargo.toml  README.md
src/: lib.rs
src/background_task/: load_file.rs  mod.rs
src/gui/: bool_param_switch.rs  diagrams.rs  float_param_knob.rs  int_param_knob.rs  mod.rs  param_slider.rs
src/sampler/: adsr.rs  decoded_audio.rs  mod.rs  params.rs  sample_player.rs
src/sampler/voices/: mod.rs  note.rs  voice.rs
